# pytest-upskilling

./: README.md  pyproject.toml
basic-math/basic_math/: maths.py
basic-math/tests/: test_maths.py
